--- a/services.html
+++ b/services.html
@@ -145,7 +145,7 @@
                             <br><br><br><br><br> 
                           </div>
                         </div>-->                 
-                    </div><br><br><br><br><br>
+                    </div><br><br><br><br><br><br>
 
 
                     <div class="shop"><br><br><br>
